<resources>
    <string name="app_name">APP</string>
    <string name="usernm">Username</string>
    <string name="userpwd">Password</string>
    <string name="title_activity_main_home">MainHome</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_mainhome2">Mainhome2</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="item_one">ITEMS ONE</string>
    <string name="item_one_one">Item Name</string>
    <string name="selection">Buy</string>
    <string name="item_value">Rs 150</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Awaesome Food</string>
    <string name="slide_1_desc">The easiest way to order the food from your favourte kitchen</string>
    <string name="slide_2_title">New Movies</string>
    <string name="slide_2_desc">Book movie tickets your weekend</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on your finger tips</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation</string>
    <string name="play_again_desc">show me again</string>
    <string name="play_again">play again</string>
    <string name="title_activity_home_menu">HomeMenu</string>
    <string name="title_activity_my_movies">MyMovies</string>
    <string name="login">Login</string>
    <string name="lname">Last Name</string>
    <string name="fname">First Name</string>
    <string name="email">Email</string>
    <string name="confmpwd">Confrim Password</string>
    <string name="pwd">Password</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_lock">&#xf23e;</string>
    <string name="fa_heartbeat">&#xf21e;</string>
    <string name="fa_cubes">&#xf1b3;</string>
    <string name="fa_heart">&#xf08a;</string>
    <string name="fa_email">&#xf003;</string>
   <string name="fb">&#xf082;</string>
    <string name="linkd">&#xf0e1;</string>
    <string name="pint">&#xf0d2;</string>
    <string name="insta">&#xf16d;</string>
    <string name="cart">&#xf217;</string>
    <string name="myhome">&#xf015;</string>
    <string name="logout">&#xf235;</string>

</resources>
