<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_gravity="top|center"
        android:layout_width="match_parent"
        android:divider="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/text12"
            android:text="@string/fa_heart"
            android:textSize="100dp"
            android:textColor="@color/bg_Scree4"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fname"
            android:hint="@string/fa_user"
            android:scrollbarStyle="outsideOverlay"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lname"
            android:hint="@string/fa_user"
            android:scrollbarStyle="outsideOverlay"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/fa_email"
            android:scrollbarStyle="outsideOverlay"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwd"
            android:inputType="textWebPassword"
            android:hint="@string/fa_lock"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confmpwd"
            android:inputType="textWebPassword"
            android:hint="@string/fa_lock"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#20000000"
            android:text="Signup"
            android:textSize="20dp"
            android:id="@+id/mysign"
            android:textColor="#048dc9" />
    </LinearLayout>
</FrameLayout>