<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.balarajum.swiping.MainActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPageAndroid"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="top|center"
        android:layout_width="match_parent"
        android:divider="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/text12"
            android:text="@string/fa_heart"
            android:textSize="100dp"
            android:textColor="@color/bg_Scree4"
            />
        <EditText
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernm"
            android:scrollbarStyle="outsideOverlay"
            android:hint="@string/fa_user"
            android:textColor="@color/dot_light_Screen1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userpwd"
            android:hint="@string/fa_lock"
            android:inputType="textWebPassword"
            android:textColor="@color/dot_light_Screen1"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#20000000"
            android:text="Login"
            android:id="@+id/log"
            android:textColor="#048dc9" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"

        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Signup"
            android:id="@+id/sign"
            android:gravity="bottom|center"
            android:textColor="#2278d4"
            />
    </LinearLayout>

</FrameLayout>
