<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/header_cover_img"
            android:scaleType="centerCrop"
            android:src="@drawable/desert"
            />
        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/profile"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />
        <RelativeLayout
           android:id="@+id/profile_layout"
            android:elevation="4dp"
            android:paddingBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/add_friend"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/fa_user"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_name"
                android:text="User Name"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_info"
                android:layout_below="@id/profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="info about user "
                android:textColor="#fff"
                android:textSize="14sp"
                />
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/profile_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:id="@+id/info"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="User info"
                android:textColor="@color/dot_light_Screen1"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="User Info 1"
                android:textColor="@color/dot_light_Screen1"
                android:layout_margin="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="User Info 2"
                android:textColor="@color/dot_light_Screen1"
                android:layout_margin="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="User Info 3"
                android:textColor="@color/dot_light_Screen1"
                android:layout_margin="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="User Info 4"
                android:textColor="@color/dot_light_Screen1"
                android:layout_margin="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="User Info 5"
                android:textColor="@color/dot_light_Screen1"
                android:layout_margin="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@id/info"
            android:id="@+id/linear7"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fb"
                android:id="@+id/fb"
                android:padding="5dp"
                android:layout_marginLeft="45dp"
                android:textColor="#006"
                android:textSize="35dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pint"
                android:padding="5dp"
                android:layout_marginLeft="25dp"
                android:id="@+id/pin"
                android:textColor="@color/dot_dark_Screen1"
                android:textSize="35dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/insta"
                android:padding="5dp"
                android:layout_marginLeft="25dp"
                android:id="@+id/inst"
                android:textColor="@color/dot_dark_Screen2"
                android:textSize="35dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/linkd"
                android:id="@+id/link"
                android:layout_marginLeft="25dp"
                android:textColor="@color/colorPrimary"
                android:textSize="35dp"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>