<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200sp">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/header_1"
                android:padding="10sp"
                android:background="#20000000"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/linear1"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_marginTop="5sp"
            android:id="@+id/linear2"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:padding="8sp"
                android:layout_marginLeft="4sp"
                android:background="#20000000"
                android:src="@drawable/one"
                android:id="@+id/img1"
                />
            <ImageView
                android:layout_width="150sp"
                android:padding="8sp"
                android:layout_height="match_parent"
                android:src="@drawable/onee"
                android:id="@+id/img2"
                android:background="#20000000"
                android:layout_marginLeft="8sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/linear2"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_marginTop="5sp"
            android:id="@+id/linear3"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:padding="8sp"
                android:layout_marginLeft="4sp"
                android:src="@drawable/onee"
                android:id="@+id/img3"
                android:background="#20000000"
                />
            <ImageView
                android:layout_width="150sp"
                android:padding="8sp"
                android:layout_marginLeft="8sp"
                android:layout_height="match_parent"
                android:src="@drawable/three"
                android:id="@+id/img4"
                android:background="#20000000"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/linear3"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_marginTop="5sp"
            android:id="@+id/linear4"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:padding="8sp"
                android:layout_marginLeft="4sp"
                android:src="@drawable/three"
                android:id="@+id/img5"
                android:background="#20000000"
                />
            <ImageView
                android:layout_width="150sp"
                android:padding="8sp"
                android:layout_marginLeft="8sp"
                android:layout_height="match_parent"
                android:src="@drawable/one"
                android:id="@+id/img6"
                android:background="#20000000"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/linear4"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_marginTop="5sp"
            android:id="@+id/linear5"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:padding="8sp"
                android:layout_marginLeft="4sp"
                android:src="@drawable/onee"
                android:id="@+id/img7"
                android:background="#20000000"
                />
            <ImageView
                android:layout_width="150sp"
                android:padding="8sp"
                android:layout_marginLeft="8sp"
                android:layout_height="match_parent"
                android:src="@drawable/onee"
                android:id="@+id/img8"
                android:background="#20000000"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@id/linear5"
            android:id="@+id/linear6"
            android:layout_marginTop="5sp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="ALL RIGHTS RESERVED @ 2017"
                android:padding="5dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/dot_dark_Screen2"
                android:textSize="18dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@id/linear6"
            android:id="@+id/linear7"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fb"
                android:id="@+id/fb"
                android:padding="5dp"
                android:layout_marginLeft="45dp"
                android:textColor="#006"
                android:textSize="35dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pint"
                android:padding="5dp"
                android:layout_marginLeft="25dp"
                android:id="@+id/pin"
                android:textColor="@color/dot_dark_Screen1"
                android:textSize="35dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/insta"
                android:padding="5dp"
                android:layout_marginLeft="25dp"
                android:id="@+id/inst"
                android:textColor="@color/dot_dark_Screen2"
                android:textSize="35dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/linkd"
                android:id="@+id/link"
                android:layout_marginLeft="25dp"
                android:textColor="@color/colorPrimary"
                android:textSize="35dp"
                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>